--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:tuGpRXuwSHZfcYYsjwvcOtRJPcpmdGTo@postgres-rsky.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:rHnllfMKqRFnqHytVItoMjjJHFBHmcTA@postgres.railway.internal:5432/railway
