--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:rHnllfMKqRFnqHytVItoMjjJHFBHmcTA@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:AjiVyCfITjGbleECoUxsargTnZpJQGto@junction.proxy.rlwy.net:18633/railway
